# sandbox-openai-whisper

./: README.md  noxfile.py  pyproject.toml
src/: main.py
src/whisper_demo/: utils.py
